2016-02-15  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/fx/ChartViewer.java
    (getCanvas): New method,
    (setCanvas): Likewise,
    * org/jfree/chart/fx/ChartViewerSkin.java
    (createNode): Set reference to canvas.

2016-01-25  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/fx/FXGraphics2D.java: Deleted,
    * org/jfree/chart/fx/FXGraphicsConfiguration.java: Likewise,
    * org/jfree/chart/fx/FXGraphicsDevice.java: Likewise.

2015-11-23  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/util/ParamChecks.java
    (requireInRange): New method,
    * org/jfree/data/time/Second.java
    (Second(int, Minute)) : Check argument is in range.

2015-09-22  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/data/general/DatasetUtilities.java
    (iterateToFindDomainBounds): Check for x-value outside interval,
    (iterateToFindRangeBounds): Check for y-value outside interval.

2015-09-11  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/fx/FXGraphics2D.java
    Updated to match latest code on GitHub,
    * org/jfree/chart/fx/FXGraphicsConfiguration.java
    New file,
    * org/jfree/chart/fx/FXGraphicsDevice.java
    New file.

2015-09-10  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/labels/IntervalXYToolTipGenerator.java
    New file.

2015-09-10  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/YIntervalRenderer.java
    (drawItem): Check item visibility and enlarge entity bounds.

2015-09-09  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/XYShapeRenderer.java
    (drawItem): Update crosshair state.

2015-09-06  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/data/time/TimeSeries.java
    (findValueRange): Check for Double.NaN.

2014-08-31  David Gilbert  <david.gilbert@object-refinery.com>
