@@ -1,3 +1,8 @@
+2016-02-19  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * org/jfree/chart/fx/ChartCanvas.java
+    (ChartCanvas): Change default font smoothing.
+
 2016-02-15  David Gilbert  <david.gilbert@object-refinery.com>
 
     * org/jfree/chart/fx/ChartViewer.java
